# temizlik_robotu

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: temizlik_robotu_baslat.launch  temizlik_robotu_bilgi_servisi_baslat.launch  temizlik_robotu_engelden_sakinma_baslat.launch  temizlik_robotu_mesafe_hesaplama_baslat.launch  temizlik_robotu_supurme_baslat.launch
scripts/: temizlik_robotu_bilgi_servisi_dugumu.py  temizlik_robotu_engelden_sakinma_dugumu.py  temizlik_robotu_mesafe_hesaplama_dugumu.py  temizlik_robotu_supurme_dugumu.py
